--- a/2025/day26_transport/day26_transport.qmd
+++ b/2025/day26_transport/day26_transport.qmd
@@ -27,7 +27,7 @@ library(showtext)
 library(sysfonts)
 font_add_google("EB Garamond","Garamond")
 showtext_auto()
-showtext_opts(dpi = 320)
+showtext_opts(dpi = 300)
 ```
 
 ## Load the data
@@ -76,13 +76,15 @@ motorway <- roads_portugal %>%
 length(unique(motorway$name))
 length(unique(motorway$ref))
 length(unique(motorway$oneway))
-
 length(unique(motorway$maxspeed))
 unique(motorway$maxspeed)
 ```
 
 ## Load Portugal boundaries
 ```{r}
+eu <- rnaturalearth::ne_countries(continent="Europe",
+                                 scale = "large",
+                                 returnclass = "sf")
 portugal <- rnaturalearth::ne_countries(country="Portugal",
                                          scale = "large",
                                          returnclass = "sf")
@@ -97,11 +99,21 @@ motorway$speed_cat <- cut(
   labels = c("Slow", "Medium", "Fast"),
   include.lowest = TRUE
 )
+
+primary$speed_cat <- cut(
+  primary$maxspeed,
+  breaks = c(0, 50, 80, 120),
+  labels = c("Slow", "Medium", "Fast"),
+  include.lowest = TRUE
+)
 ```
 
 ## Plot the map
 ```{r}
 ggplot()+
+  geom_sf(data=eu,
+          fill="#99af9e",
+          color="grey40")+
   geom_sf(data=portugal,
           fill="#e6edf2",
           color="grey40")+
@@ -109,28 +121,28 @@ ggplot()+
           aes(color=(speed_cat)),
           show.legend = T,
           size=0.5) +
-scale_color_manual(values = c(
-  "Slow"   = "#4575b4",
+  geom_sf(data=primary,
+          aes(color=(speed_cat)),
+          show.legend = F,
+          size=0.3) +
+  scale_color_manual(values = c(
+  "Slow"   = "grey40",
   "Medium" = "#fee090",
-  "Fast"   = "#d73027"
-))+
-  labs(title="Transport Networks",
-       subtitle="Portugal motorways by speed categories",
+  "Fast"   = "#d73027"))+
+  labs(title="Portugal Transport Networks",
+       subtitle="Primary and motorways by speed categories",
        caption="DataSource: Portugal Geofabrik Open Data\n#30DayMapChallenge 2025 Day 26: Transport | Map: Federica Gazzelloni",
        color="Speed")+
-  coord_sf(xlim=c(-10.5,-5.5),
-           ylim=c(36,42),
-           clip = "off") +
+  coord_sf(xlim=c(-9,-5),ylim=c(36,45),expand = T,clip = "off") +
   ggthemes::theme_map()+
   theme(text =element_text(family="Garamond"),
-        plot.background = element_rect(fill=NA,color=NA),
-        panel.background = element_rect(fill=NA,color=NA),
-        text=element_text(size=14),
-        plot.title = element_text(face="bold",hjust = 0.5),
+        plot.title = element_text(face="bold",hjust = 0.5,size=18),
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0.5,size=9),
-        legend.background = element_rect(fill=NA,color=NA),
-        legend.position = "right")
+        legend.direction = "horizontal",
+        legend.position.inside = "inside",
+        legend.position = c(-0.5,0.9),
+        legend.background = element_rect(fill=NA,color=NA))
 ```
 
 
@@ -141,7 +153,7 @@ ggsave("day26_transport.png",
        width = 6,
        height = 4,
        dpi = 320,
-       bg="#fe9c64")
+       bg="#89a5b9")
 ```
 
 
